@@ -3,6 +3,10 @@ Copyright 2009-2019 Antti Ajanki
 Distributed under the GPL v3
 
 
+<unreleased>
+
+- Make --destdir and -o work together
+
 Version 20190614 - Ten year anniversary edition
 
 - Improved compability with older ffmpeg versions
